<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_movie_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="16dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/movie_page_top_part">

            <ImageView
                android:id="@+id/image_page_poster"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:layout_width="150dp"
                android:layout_height="222dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_page_poster"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/image_page_poster">

                <TableRow
                    android:id="@+id/row_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_title" />

                    <TextView
                        android:id="@+id/text_movie_page_title_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_year" />

                    <TextView
                        android:id="@+id/text_movie_page_year_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_country" />

                    <TextView
                        android:id="@+id/text_movie_page_country_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_length" />

                    <TextView
                        android:id="@+id/text_movie_page_length_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_genres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_genres" />

                    <TextView
                        android:id="@+id/text_movie_page_genres_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_director"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_director" />

                    <TextView
                        android:id="@+id/text_movie_page_director_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text=" " />
                </TableRow>

                <TableRow
                    android:id="@+id/row_actors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_movie_page_actors" />

                    <TextView
                        android:id="@+id/text_movie_page_actors_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text=" " />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_movie_page_plot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/movie_page_top_part"
            android:layout_marginTop="10dp"
            android:text="Plot:" />

        <TextView
            android:id="@+id/text_movie_page_plot_content"
            android:layout_below="@id/text_movie_page_plot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No plot is available."
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>
